--- a/templates/Review/form.html.twig
+++ b/templates/Review/form.html.twig
@@ -81,7 +81,7 @@
       <div class="text-right">
         <button type="submit" class="btn btn-primary">
           {{ 'review.send'|trans }}
-          <i class="icon-arrow-right14 position-right"></i>
+          {{ heroicon('arrow-right', 'w-6 h-6 position-right') }}
         </button>
       </div>
       {{ form_rest(form) }}
