--- a/templates/Search/index.html.twig
+++ b/templates/Search/index.html.twig
@@ -15,7 +15,7 @@
         <ul class="media-list content-group">
             <li class="media panel panel-body">
                 <div class="text-center text-muted">
-                    <i class="icon-warning2 icon-2x"></i>
+                    {{ heroicon('exclamation-triangle', 'w-8 h-8') }}
                     <p class="mt-10">{{ error }}</p>
                 </div>
             </li>
@@ -24,7 +24,7 @@
         <ul class="media-list content-group">
             <li class="media panel panel-body">
                 <div class="text-center text-muted">
-                    <i class="icon-search4 icon-2x"></i>
+                    {{ heroicon('magnifying-glass', 'w-8 h-8') }}
                     <p class="mt-10">{{ 'search_index.noResult'|trans() }}</p>
                 </div>
             </li>
