--- a/templates/Default/contact.html.twig
+++ b/templates/Default/contact.html.twig
@@ -15,7 +15,7 @@
   <div class="text-right">
     <button id="contact_btn" type="submit" class="btn btn-primary">
       {{ 'contact.send'|trans }}
-      <i class="icon-arrow-right14 position-right"></i>
+      {{ heroicon('arrow-right', 'w-6 h-6 position-right') }}
     </button>
   </div>
   {{ form_end(form) }}
