--- a/templates/Profile/_menu.html.twig
+++ b/templates/Profile/_menu.html.twig
@@ -12,35 +12,35 @@
 
     <div class="list-group no-border no-padding-top">
     <a href="{{ path('profile') }}" class="list-group-item">
-        <i class="icon-user"></i>
+        {{ heroicon('user', 'w-6 h-6') }}
         {{ 'profile.title'|trans }}
     </a>
     <a href="{{ path('profile_settings') }}" class="list-group-item">
-        <i class="icon-cog"></i>
+        {{ heroicon('cog-6-tooth', 'w-6 h-6') }}
         {{ 'profile.settings.title'|trans }}
     </a>
     <a href="{{ path('profile_ratings') }}" class="list-group-item">
-        <i class="icon-stars"></i>
+        {{ heroicon('star', 'w-6 h-6') }}
         {{ 'profile.menu.ratings'|trans }}
         <span class="badge bg-teal-400 pull-right">{{ user.ratings|length }}</span>
     </a>
     <a href="{{ path('user_reviews', {'id': user.id}) }}" class="list-group-item">
-        <i class="icon-megaphone"></i>
+        {{ heroicon('megaphone', 'w-6 h-6') }}
         {{ 'profile.menu.reviews'|trans }}
     </a>
     <a href="{{ path('user_tops', {'id': user.id}) }}" class="list-group-item">
-        <i class="icon-clipboard3"></i>
+        {{ heroicon('clipboard', 'w-6 h-6') }}
         {{ 'profile.menu.tops'|trans }}
     </a>
     {% if images_counter > 0 %}
         <a href="{{ path('user_pictures', {'id': user.id}) }}" class="list-group-item">
-        <i class="icon-camera"></i>
+        {{ heroicon('camera', 'w-6 h-6') }}
             {{ 'profile.menu.photos'|trans }}
             <span class="badge bg-teal-400 pull-right">{{ images_counter }}</span>
         </a>
     {% endif %}
     <a href="{{ path('map_user', {'id': user.id}) }}" class="list-group-item">
-        <i class="icon-location3"></i>
+        {{ heroicon('map-pin', 'w-6 h-6') }}
         {{ 'profile.menu.map'|trans }}
     </a>
     </div>
