--- a/templates/Profile/settings.html.twig
+++ b/templates/Profile/settings.html.twig
@@ -106,7 +106,7 @@
               </fieldset>
 
               <button type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right pull-right">
-                <b><i class="icon-circle-right2"></i></b>
+                <b>{{ heroicon('arrow-right-circle', 'w-6 h-6') }}</b>
                 {{ 'profile.settings.save'|trans }}
               </button>
 
