--- a/templates/Profile/user_stats.html.twig
+++ b/templates/Profile/user_stats.html.twig
@@ -12,7 +12,7 @@
                         <span class="text-uppercase text-size-mini text-muted">{{ 'profile.stats.ridden_coasters'|trans({'count': stats.nb_coasters}) }}</span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-trophy3 icon-3x text-success-400 opacity-75"></i>
+                        {{ heroicon('trophy', 'w-12 h-12 text-success-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                         <span class="text-uppercase text-size-mini text-muted">{{ 'profile.stats.explored_parks'|trans({'count': stats.nb_park}) }}</span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-location3 icon-3x text-blue-400 opacity-75"></i>
+                        {{ heroicon('map-pin', 'w-12 h-12 text-blue-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                         <span class="text-uppercase text-size-mini text-muted">{{ 'profile.stats.visited_countries'|trans({'count': stats.nb_country}) }}</span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-earth icon-3x text-indigo-400 opacity-75"></i>
+                        {{ heroicon('globe-americas', 'w-12 h-12 text-indigo-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -53,11 +53,11 @@
                         <h3 class="no-margin text-semibold text-teal-400">{{ (stats.top_100 * 100 / 100)|round }}/100</h3>
                         <span class="text-uppercase text-size-mini text-muted">
                             {{ 'profile.stats.world_top_100'|trans }}
-                            <i class="icon-question3 text-muted ml-5" data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.operating_top_100'|trans }}: {{ (stats.top_100_operating * 100 / 100)|round }}/100" style="font-size: 12px; cursor: help;" tabindex="0"></i>
+                            <span data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.operating_top_100'|trans }}: {{ (stats.top_100_operating * 100 / 100)|round }}/100" style="font-size: 12px; cursor: help;" tabindex="0">{{ heroicon('question-mark-circle', 'w-6 h-6 text-muted ml-5') }}</span>
                         </span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-trophy2 icon-3x text-teal-400 opacity-75"></i>
+                        {{ heroicon('trophy', 'w-12 h-12 text-teal-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -72,11 +72,11 @@
                         <h3 class="no-margin text-semibold text-warning-400">{{ stats.country.name|trans([], 'database') }}</h3>
                         <span class="text-uppercase text-size-mini text-muted">
                             {{ 'profile.stats.top_country'|trans }}
-                            <i class="icon-question3 text-muted ml-5" data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.coaster_count'|trans({'count': stats.country.nb}) }}" style="font-size: 12px; cursor: help;" tabindex="0"></i>
+                            <span data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.coaster_count'|trans({'count': stats.country.nb}) }}" style="font-size: 12px; cursor: help;" tabindex="0">{{ heroicon('question-mark-circle', 'w-6 h-6 text-muted ml-5') }}</span>
                         </span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-flag3 icon-3x text-warning-400 opacity-75"></i>
+                        {{ heroicon('flag', 'w-12 h-12 text-warning-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -89,11 +89,11 @@
                         <h3 class="no-margin text-semibold text-pink-400">{{ stats.manufacturer.name }}</h3>
                         <span class="text-uppercase text-size-mini text-muted">
                             {{ 'profile.stats.top_manufacturer'|trans }}
-                            <i class="icon-question3 text-muted ml-5" data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.coaster_count'|trans({'count': stats.manufacturer.nb}) }}" style="font-size: 12px; cursor: help;" tabindex="0"></i>
+                            <span data-popup="tooltip" data-trigger="click hover focus" title="{{ 'profile.stats.coaster_count'|trans({'count': stats.manufacturer.nb}) }}" style="font-size: 12px; cursor: help;" tabindex="0">{{ heroicon('question-mark-circle', 'w-6 h-6 text-muted ml-5') }}</span>
                         </span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-cog3 icon-3x text-pink-400 opacity-75"></i>
+                        {{ heroicon('cog-8-tooth', 'w-12 h-12 text-pink-400 opacity-75') }}
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                         <span class="text-uppercase text-size-mini text-muted">{{ 'profile.stats.favorite_manufacturer'|trans }}</span>
                     </div>
                     <div class="media-right media-middle">
-                        <i class="icon-heart5 icon-3x text-orange-400 opacity-75"></i>
+                        {{ heroicon('heart', 'w-12 h-12 text-orange-400 opacity-75') }}
                     </div>
                 </div>
             </div>
