--- a/templates/User/tops.html.twig
+++ b/templates/User/tops.html.twig
@@ -9,7 +9,7 @@
   <div class="panel panel-body stack-media-on-mobile">
     <div class="media-left">
       <a href="#" class="btn btn-link btn-icon text-teal">
-        <i class="icon-clipboard3 icon-2x no-edge-top"></i>
+        {{ heroicon('clipboard', 'w-8 h-8 no-edge-top') }}
       </a>
     </div>
     <div class="media-body media-middle">
@@ -17,7 +17,7 @@
       {{ 'top.list.info'|trans }}
     </div>
     <div class="media-right media-middle">
-      <a href="{{ path('top_new') }}" class="btn bg-teal-400 btn-lg"><i class="icon-add position-left"></i>
+      <a href="{{ path('top_new') }}" class="btn bg-teal-400 btn-lg">{{ heroicon('plus', 'w-6 h-6 position-left') }}
         {% if tops|length == 0 %}{{ 'top.list.create_first'|trans }}{% else %}{{ 'top.list.create'|trans }}{% endif %}
       </a>
     </div>
@@ -34,7 +34,7 @@
               </div>
               <div class="media-body">
                 <h6 class="text-semibold no-margin">
-                  {% if top.main %}<i class="icon-checkmark3 text-size-mini position-left"></i>{% endif %}
+                  {% if top.main %}{{ heroicon('check', 'w-6 h-6 text-size-mini position-left') }}{% endif %}
                   <a href="{{ path('top_show', {'id': top.id}) }}" class="text-default">
                     {{ top.name }}
                   </a>
@@ -58,13 +58,13 @@
             </ul>
             <div class="media">
               <a href="{{ path('top_show', {'id': top.id}) }}">
-                <i class="icon-circle-right2"></i> {{ 'top.list.more'|trans }}
+                {{ heroicon('arrow-right-circle', 'w-6 h-6') }} {{ 'top.list.more'|trans }}
               </a>
             </div>
             <ul class="list-inline media">
-              <li><i class="icon-stack3 position-left"></i> {{ top.topCoasters|length }}</li>
+              <li>{{ heroicon('square-3-stack-3d', 'w-6 h-6 position-left') }} {{ top.topCoasters|length }}</li>
               <li>
-                <i class="icon-alarm position-left"></i> {{ 'top.list.updated'|trans }} {{ top.updatedAt|ago }}
+                {{ heroicon('bell-alert', 'w-6 h-6 position-left') }} {{ 'top.list.updated'|trans }} {{ top.updatedAt|ago }}
               </li>
             </ul>
           </div>
