--- a/templates/helper.html.twig
+++ b/templates/helper.html.twig
@@ -14,9 +14,35 @@
     {% endif %}
 {% endmacro %}
 
-{# Color magic for ratings #}
+{# Color magic for ratings - Legacy support #}
 {% macro ratingColor(score) %}
     hsl({{ score * 1.2 }}, 50%, 50%)
+{% endmacro %}
+
+{# Quality tier for modern score display #}
+{% macro qualityTier(score) %}
+    {% if score >= 70 %}
+        excellent
+    {% elseif score >= 50 %}
+        good
+    {% elseif score >= 30 %}
+        fair
+    {% else %}
+        poor
+    {% endif %}
+{% endmacro %}
+
+{# Quality label translation key #}
+{% macro qualityLabel(score) %}
+    {% if score >= 70 %}
+        coaster.quality.excellent
+    {% elseif score >= 50 %}
+        coaster.quality.good
+    {% elseif score >= 30 %}
+        coaster.quality.fair
+    {% else %}
+        coaster.quality.poor
+    {% endif %}
 {% endmacro %}
 
 {# Display coaster rank variation #}
@@ -25,29 +51,52 @@
         <span class="badge badge-flat border-warning-600 text-warning-600">new</span>
     {% elseif coaster.previousRank < coaster.rank %}
         <span class="badge badge-flat border-danger-600 text-danger-600">
-      <i class="icon-arrow-down5"></i> {{ (coaster.rank - coaster.previousRank)|abs }}
+      {{ heroicon('arrow-down', 'w-6 h-6') }} {{ (coaster.rank - coaster.previousRank)|abs }}
     </span>
     {% elseif coaster.previousRank > coaster.rank %}
         <span class="badge badge-flat border-success-600 text-success-600">
-      <i class="icon-arrow-up5"></i> {{ (coaster.rank - coaster.previousRank)|abs }}
+      {{ heroicon('arrow-up', 'w-6 h-6') }} {{ (coaster.rank - coaster.previousRank)|abs }}
     </span>
     {% elseif coaster.previousRank == coaster.rank %}
-        <span class="badge badge-flat border-primary-600 text-primary-600"><i class="icon-arrow-right5"></i></span>
+        <span class="badge badge-flat border-primary-600 text-primary-600">{{ heroicon('arrow-right', 'w-6 h-6') }}</span>
     {% endif %}
+{% endmacro %}
+
+{# Render a tag with consistent styling across the site #}
+{% macro tag(text, type) %}
+    <span class="label label-{{ type == 'pro' ? 'success' : 'danger' }} label-rounded">{{ text }}</span>
 {% endmacro %}
 
 {# Display star rating #}
 {% macro starRating(rating) %}
-    <span class="media-annotation dotted">
-        <span class="text-warning">
-            {% set low = rating|round(0, 'floor') %}
-            {% if low > 0 %}
-                {% for i in 1..low %}
-                    <i class="icon-star-full2"></i>
+    <span class="media-annotation dotted" style="display: inline-flex; align-items: center;">
+        <span class="text-warning" style="display: inline-flex; align-items: center; gap: 2px; vertical-align: middle;">
+            {% set fullStars = rating|round(0, 'floor') %}
+            {% set hasHalfStar = (rating - fullStars) >= 0.5 %}
+            
+            {# Full stars #}
+            {% if fullStars > 0 %}
+                {% for i in 1..fullStars %}
+                    {{ heroicon('star', 'w-6 h-6', 'solid') }}
                 {% endfor %}
             {% endif %}
-            {% if low < rating %}
-                <i class="icon-star-half"></i>
+            
+            {# Half star - custom SVG with left half solid, right half outline #}
+            {% if hasHalfStar %}
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" style="display: inline-block; vertical-align: middle;">
+                    <defs>
+                        <clipPath id="left-half">
+                            <rect x="0" y="0" width="12" height="24"/>
+                        </clipPath>
+                        <clipPath id="right-half">
+                            <rect x="12" y="0" width="12" height="24"/>
+                        </clipPath>
+                    </defs>
+                    {# Left half - solid fill #}
+                    <path clip-path="url(#left-half)" fill="currentColor" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"/>
+                    {# Right half - outline stroke #}
+                    <path clip-path="url(#right-half)" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"/>
+                </svg>
             {% endif %}
         </span>
     </span>
